--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"/usr/lib/jvm/java-8-oracle","type":"JRE","hints":{}},"jre:jre:1.8.0"],[{"location":"/home/nenad/Desktop/AgentTechnologies/AgentSystemEJB","type":"PROJECT","hints":{"PROJECT_NAME":"AgentSystemEJB"}},"ABSENT"]]
+[[{"location":"/usr/lib/jvm/java-8-oracle","type":"JRE","hints":{}},"jre:jre:1.8.0"]]
