AidMessage class added and finding the agent to receive the msg and passing it to him

--- a/AgentSystemEJB/.classpath
+++ b/AgentSystemEJB/.classpath
@@ -12,5 +12,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="jboss-client.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
