getting interface from the lookup

--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"/home/nenad/Desktop/AgentTechnologies/AgentSystemEJB","type":"PROJECT","hints":{"PROJECT_NAME":"AgentSystemEJB"}},"ABSENT"]]
